// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"edit artworks" button does not render an edit button if there are no artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c2 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c2:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c2 .filter {
  margin-top: 1em;
}

.c2 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c2 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`"edit artworks" button renders a disabled edit button if there are artworks, but none selected 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c2 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c2:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c2 .filter {
  margin-top: 1em;
}

.c2 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c2 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #cccccc;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
  <button
    className="c3"
    disabled={true}
  >
    Edit Artworks
  </button>
</div>
`;

exports[`"edit artworks" button renders an enabled edit button if there are selected artworks 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c2 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c2:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c2 .filter {
  margin-top: 1em;
}

.c2 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c2 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

.c3 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #000000;
  color: #ffffff;
  border: solid 1px #000000;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
}

.c3:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
  <button
    className="c3"
    onClick={undefined}
  >
     Edit Artworks 
  </button>
</div>
`;

exports[`does not render fair autosuggest if fair is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Fair
      </h2>
      <div
        className="c1"
      >
        Nice Fair
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`does not render partner autosuggest if partner is already selected 1`] = `
.c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c2 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c2 input:focus {
  outline: none;
}

.c3 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c3:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c3 .filter {
  margin-top: 1em;
}

.c3 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c3 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div>
      <h2>
        Partner
      </h2>
      <div
        className="c1"
      >
        Nice Gallery
        <a
          className="remove"
          href="#"
          onClick={[Function]}
        >
          ✕
        </a>
      </div>
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

.c1 input {
  width: 100%;
  margin: 1em 0 0 0;
  line-height: 2em;
  font-size: 1em;
  border: none;
  border-bottom: solid 1px #ddd;
  background: none;
}

.c1 input:focus {
  outline: none;
}

.c2 {
  font-size: 80%;
  color: #999;
  line-height: 140%;
  margin: 2em 0;
  opacity: 0.25;
  -webkit-transition: opacity 0.75s;
  transition: opacity 0.75s;
}

.c2:hover {
  opacity: 1;
  -webkit-transition: opacity 0.25s;
  transition: opacity 0.25s;
}

.c2 .filter {
  margin-top: 1em;
}

.c2 .filter a {
  color: #ccc;
  margin-right: 0.5em;
}

.c2 .filter a.active {
  color: #333;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
}

<div
  className=""
>
  <div
    className="c0"
  />
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-gene-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a gene"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-gene-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-tag-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Add a tag"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-tag-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-partner-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a partner"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-partner-autosuggest"
      />
    </div>
  </div>
  <div
    className="GenericAutosuggest"
  >
    <div
      className="react-autosuggest__container"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-fair-autosuggest"
        autoComplete="off"
        className="react-autosuggest__input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select a fair"
        role="combobox"
        type="text"
        value=""
      />
      <div
        className="react-autosuggest__suggestions-container"
        id="react-autowhatever-fair-autosuggest"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created after date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <input
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Created before date"
      type="text"
      value=""
    />
    <div
      className="parsed"
    >
      <a
        href="#"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="filter"
    >
      <div>
        Published?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Published
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not published
      </a>
    </div>
    <div
      className="filter"
    >
      <div>
        Genomed?
      </div>
      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        All
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Genomed
      </a>
      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        Not genomed
      </a>
    </div>
  </div>
</div>
`;
